# django-sendgrid-v5

./: CONTRIBUTING.md  publish.sh  pyproject.toml  setup.py  tox.ini
test/: test_echo_to_stream.py  test_post_to_sendgrid.py  test_sandbox_mode.py
